package GameLogic;

/**
 * The state of the game in order.
 */
public enum State {
	initializeGame,
	mapEditor,
	startupPhase,
	editPlayer,
	troopArmies,
	exchangeCards,
	reinforcementPhase,
	attackPhase,
	fortificationPhase,
	gameFinished
}
